--- a/css/comingsoon.css
+++ b/css/comingsoon.css
@@ -1,7 +1,7 @@
 .version.comingsoon /* version checker */
 {
-	color: #000001;
-	background-color: #6D46BD;
+	color: #00001E;
+	background-color: #C56E49;
 }
 
 .html
@@ -146,10 +146,10 @@
 	z-index: 28;
 	width: 200px;
 	background-color: transparent;
-	letter-spacing: 3px;
+	line-height: 16px;
 	text-align: center;
 	font-size: 16px;
-	line-height: 16px;
+	letter-spacing: 3px;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 205px;
