--- a/css/lonelylego.css
+++ b/css/lonelylego.css
@@ -1,7 +1,7 @@
 .version.lonelylego /* version checker */
 {
-	color: #0000EA;
-	background-color: #44D07B;
+	color: #000013;
+	background-color: #4A07D4;
 }
 
 .html
@@ -674,9 +674,9 @@
 	border-color: transparent;
 	background-color: #FFFFFF;
 	padding: 10px;
-	text-align: left;
-	line-height: 20px;
 	color: #999999;
+	line-height: 20px;
+	text-align: left;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	margin-right: -10000px;
 	position: relative;
@@ -691,9 +691,9 @@
 	border-color: transparent;
 	background-color: #FFFFFF;
 	padding: 10px;
-	text-align: left;
-	line-height: 20px;
 	color: #999999;
+	line-height: 20px;
+	text-align: left;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	margin-right: -10000px;
 	position: relative;
@@ -708,9 +708,9 @@
 	border-color: transparent;
 	background-color: #FFFFFF;
 	padding: 10px;
-	text-align: left;
-	line-height: 20px;
 	color: #999999;
+	line-height: 20px;
+	text-align: left;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	margin-right: -10000px;
 	position: relative;
@@ -725,9 +725,9 @@
 	border-color: transparent;
 	background-color: #FFFFFF;
 	padding: 10px;
-	text-align: left;
-	line-height: 20px;
 	color: #999999;
+	line-height: 20px;
+	text-align: left;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	margin-right: -10000px;
 	position: relative;
@@ -742,9 +742,9 @@
 	border-color: transparent;
 	background-color: #FFFFFF;
 	padding: 10px;
-	text-align: left;
-	line-height: 20px;
 	color: #999999;
+	line-height: 20px;
+	text-align: left;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	margin-right: -10000px;
 	position: relative;
@@ -759,9 +759,9 @@
 	border-color: transparent;
 	background-color: #FFFFFF;
 	padding: 10px;
-	text-align: left;
-	line-height: 20px;
 	color: #999999;
+	line-height: 20px;
+	text-align: left;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	margin-right: -10000px;
 	position: relative;
@@ -776,9 +776,9 @@
 	border-color: transparent;
 	background-color: #FFFFFF;
 	padding: 10px;
-	text-align: left;
-	line-height: 20px;
 	color: #999999;
+	line-height: 20px;
+	text-align: left;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	margin-right: -10000px;
 	position: relative;
@@ -818,9 +818,9 @@
 	border-color: transparent;
 	background-color: #FFFFFF;
 	padding: 10px;
-	text-align: center;
-	line-height: 20px;
 	color: #999999;
+	line-height: 20px;
+	text-align: center;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	top: 608px;
 	left: 610px;
